# ConnectSolar

./: README.md
SolarConnect/: app.py  pyproject.toml
SolarConnect/data/: appliances.py  installers.py  kenya_counties.py  kenya_electricity_tariffs.py
SolarConnect/pages/: 1_Energy_Calculator.py  2_Solar_Sizing.py  3_Cost_Comparison.py  4_Installer_Directory.py
SolarConnect/utils/: energy_calculator.py  pdf_generator.py  pvgis_api.py  roi_calculator.py  solar_calculator.py
