[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-folium>=0.24.1",
    "streamlit>=1.44.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "reportlab>=4.4.0",
    "matplotlib>=3.10.1",
    "folium>=0.19.5",
    "openai>=1.75.0",
    "pypdf2>=3.0.1",
    "trafilatura>=2.0.0",
]
